More comprehensive tests

--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Хуяйтел</title>
+    <title>Results</title>
 </head>
 <body>
 <h1>{{ question.question_text }}</h1>
