--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Детали ебучие</title>
+    <title>Details</title>
 </head>
 <body>
 <h1>{{ question.question_text }}</h1>
