--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Хуяйтел</title>
+    <title>Index</title>
 </head>
 <body>
 {% if latest_question_list %}
